# always-online-stun

./: Cargo.toml  LICENSE  README.md  candidates.txt  geoip_cache.txt  run.sh  valid_hosts.txt  valid_hosts_tcp.txt  valid_ipv4s.txt  valid_ipv4s_tcp.txt  valid_ipv6s.txt  valid_ipv6s_tcp.txt  valid_nat_testing_hosts.txt  valid_nat_testing_hosts_tcp.txt  valid_nat_testing_ipv4s.txt  valid_nat_testing_ipv4s_tcp.txt  valid_nat_testing_ipv6s.txt  valid_nat_testing_ipv6s_tcp.txt
.github/workflows/: check-list.yaml  ipv6-test.yml  run-hourly-check.yml
endian_buf/: Cargo.toml
endian_buf/src/: lib.rs
endianeer/: Cargo.toml
endianeer/src/: lib.rs
examples/: read.rs  stun_client_tcp.rs  stun_client_udp.rs  write.rs
src/: by_threes_check.rs  candidates.rs  geoip.rs  git.rs  main.rs  outputs.rs  servers.rs  stun.rs  stun_client.rs  stun_client_2.rs  utils.rs
src/stun_codec/: enums.rs  message.rs  mod.rs
src/stun_codec/attrs/: change_address.rs  changed_address.rs  fingerprint.rs  message_integrity.rs  opt_xor_mapped_address.rs  reflected_from.rs  response_address.rs  software.rs  source_address.rs  xor_mapped_address.rs
stun-bytes/: Cargo.toml
stun-bytes/src/: lib.rs
stun-format/: Cargo.toml
stun-format/src/: format.rs  lib.rs
stun_bytes/: Cargo.toml
stun_bytes/src/: lib.rs
stun_client/: Cargo.toml
stun_client/src/: client.rs  lib.rs
stun_proto/: Cargo.toml  eval.md  progress.md  reference.md
stun_proto/src/: attrs.rs  base.rs  be.rs  byte.rs  consts.rs  endian.rs  enums.rs  lib.rs  message.rs  msg.rs  raw.rs  reader.rs  repr_c.rs  rfc3489.rs  rfc3xxx.rs  rfc5389.rs  typed.rs  vals.rs
stun_proto/src/attrs/: alternate_server.rs  error_code.rs  mapped_address.rs  mod.rs  nonce.rs  other_address.rs  password.rs  realm.rs  response_origin.rs  unknown_attributes.rs  username.rs
stun_proto/src/attrs/base/: malformed.rs  mod.rs  shared.rs  unknown.rs
stun_tester/: Cargo.toml
stun_tester/src/: lib.rs
