[package]
name = "always-online-stun"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.56", default-features = false }
futures = { version = "0.3.17" }
log = { version = "0.4.16" }
pretty_env_logger = { version = "0.4.0" }
rand = { version = "0.8.4", default-features = true }
reqwest = { version = "0.11.10", default-features = false, features=["json", "rustls-tls"] }
serde_json = { version = "1.0.70", default-features = false }
stun_client = { path = "./stun_client" }
stun_proto = { path = "./stun_proto" }
tokio = { version = "1.14.0", default-features = false, features = ["fs", "macros", "net", "rt"] }
tokio-stream = { version = "0.1.8", default-features = false }