[package]
name = "endianeer"
version = "1.0.0"
edition = "2021"

[features]
u16 = []
u32 = []
u64 = []
u128 = []
i16 = []
i32 = []
i64 = []
i128 = []
unsigned = ["u16", "u32", "u64", "u128"]
signed = ["i16", "i32", "i64", "i128"]
carve = []
copy-from = []
splice = []
ref-from = []
arr-from = []
default = ["unsigned", "signed", "carve", "copy-from", "splice", "ref-from", "arr-from"]
