[package]
name = "stun_bytes"
version = "0.1.0"
edition = "2021"

[features]
mut = []
default = []

[dependencies]
endianeer = { path = "../endianeer", default-features = false, features = ["u16", "carve", "safe-copy"] }

[dev-dependencies]
endianeer = { path = "../endianeer", default-features = false, features = ["u16", "u32", "u128", "carve"] }
