[package]
name = "stun_bytes"
version = "0.1.0"
edition = "2021"

[features]
mut = []
default = []

[dependencies]
endianeer = { path = "../endianeer", default-features = false, features = ["u16", "carve", "splice"] }

[dev-dependencies]
endianeer = { path = "../endianeer", default-features = false, features = ["u32", "u128"] }
