[package]
name = "stun_proto"
version = "0.1.0"
edition = "2021"

[features]
rfc3489 = []
rfc5389 = []
rfc5245 = []
rfc5780 = []
rfc5766 = []
rfc8489 = []
rfc8445 = []
rfc8656 = []
rtf6679 = []
rfc7635 = []
rfc7982 = []
rfc8016 = []
rfc6062 = []
iana    = []
fmt     = []

default = ["rfc3489", "rfc5389", "rfc5245", "rfc5780", "rfc5766", "rfc8489", "rfc8445", "rfc8656", "rtf6679", "rfc7635", "rfc7982", "rfc8016", "rfc6062", "iana", "fmt"]

[dependencies]
endianeer = { path = "../endianeer", default-features = false, features = ["carve", "unsigned", "splice"] }
stun_bytes = { path = "../stun_bytes" }
