[package]
name = "stun_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dnsclient = { version = "0.1.17" }
socket2 = { version = "0.4.4" }
stun_client = { path = "../stun_client" }
stun_proto = { path = "../stun_proto" }